# trustedbird

./: .gitignore
addons/message-remote-services/: ChangeLog  build.xml  configure.ac  update.rdf
addons/message-remote-services/api/java/: README.txt
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/account/: AccountServiceProxy.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/browse/: FolderHolder.java  FoldersHolder.java  MessageHandler.java  MessageHandlersHolder.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/compose/: Attachment.java  Header.java  Message.java  MessageComposeServiceProxy.java  Notification.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/exceptions/: CommunicationException.java  InternalServerException.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/init/: API.java  ServiceCreator.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/listeners/: AbstractMimeMessageListener.java
addons/message-remote-services/api/java/src/org/milimail/messageRemoteServiceAPI/stubs/: AccountServiceHelper.java  AccountServiceOperations.java  AddressesHelper.java  CAccountHelper.java  CAccountHolder.java  CAttachment.java  CDSNType.java  CDSNTypeHolder.java  CFoldersHolder.java  CHeader.java  CHeaderHelper.java  CHeaderHolder.java  CInternalServerException.java  CMessageHdr.java  CMessageHdrHolder.java  CMessageHelper.java  CMessageHolder.java  CNotification.java  CSecurityHolder.java  MessageBrowseService.java  MessageBrowseServiceOperations.java  MessageSendListener.java  MessageSendListenerOperations.java  MessageSendListenerPOA.java  SourceListener.java  SourceListenerHelper.java  SourceListenerHolder.java  SourceListenerPOA.java  _MessageBrowseServiceStub.java  _MessageComposeServiceStub.java  _SourceListenerStub.java  octetSeqHelper.java  octetSeqHolder.java
addons/message-remote-services/api/java/test_up/org/milimail/messageRemoteServiceAPI/account/: AccountServiceTest.java
addons/message-remote-services/api/java/test_up/org/milimail/messageRemoteServiceAPI/browse/: MessageBrowseServiceTest.java
addons/message-remote-services/api/java/test_up/org/milimail/messageRemoteServiceAPI/compose/: MessageServiceTest.java
addons/message-remote-services/api/java/test_up/org/milimail/messageRemoteServiceAPI/init/: IORFinderTester.java
addons/message-remote-services/lib/omniORB-4.1.2/include/omniORB4/: Naming.hh
addons/message-remote-services/lib/omniORB-4.1.2/lib/x86_win32/: COS4_rtd.lib  msvcstub.lib  omniORB412_rt.lib  omnisslTP4.lib  omnithread33_rt.lib
addons/message-remote-services/lib/omniORB-4.1.2/src/lib/omniORB/dynamic/: constants.cc  context.cc  policy.cc  serverRequest.cc  valueBase.cc  valueType.cc
addons/message-remote-services/lib/omniORB-4.1.2/src/lib/omniORB/orbcore/: GIOP_S.cc  callDescriptor.cc  cdrMemoryStream.cc  cs-UTF-16.cc  dynamicLib.cc  giopImpl12.cc  giopServer.cc  giopStream.cc  ior.cc  libcWrapper.cc  minorCode.cc  orbOptions.cc  orbOptionsFile.cc  remoteIdentity.cc
addons/message-remote-services/lib/omniORB-4.1.2/src/lib/omniORB/orbcore/ssl/: sslActive.cc  sslEndpoint.cc
addons/message-remote-services/lib/omniORB-4.1.2/src/lib/omniORB/orbcore/tcp/: tcpAddress.cc
addons/message-remote-services/lib/omniORB-4.1.2/src/lib/omniORB/orbcore/unix/: unixAddress.cc
addons/message-remote-services/lib/omniORB-4.1.2/src/tool/omniidl/cxx/: idlast.cc
addons/message-remote-services/src/: Makefile.am
addons/message-remote-services/src/corba/: AccountService_i.h  ClientServices.idl  MRSLogger.cpp  Services.h  SourceStreamListener.h  Utils.h
addons/message-remote-services/src/xpcom/: IMessageRemoteService.h  MessageRemoteService.cpp
addons/message-remote-services/win/: Message_remote_services.dsp  Message_remote_services.ncb
addons/message-remote-services/win/Release/: Message_remote_services.exp
addons/message-remote-services/xpi/chrome/content/: options.xul  overlay.js  overlay.xul
addons/message-remote-services/xpi/chrome/locale/en-US/: overlay.properties
all-addons-tb3/: README  install.rdf
all-addons-tb30/: ChangeLog
message-remote-services/src/corba/: BodyStreamListener.cpp  BodyStreamListener.h  ClientServices.idl  HeadersStreamListener.cpp  HeadersStreamListener.h  MRSLogger.h  Makefile.am  Makefile.in  MessageBrowseService_i.cpp  MessageBrowseService_i.h  MessageComposeService_i.h  MessageStreamListener.cpp  MessageStreamListener.h  Services.h  Services.idl  ServicesSK.cpp  SourceStreamListener.cpp
message-remote-services/src/xpcom/: Makefile.am  Makefile.in  MessageRemoteService.cpp  MessageRemoteService.h  MessageRemoteServiceModule.cpp
message_remote_services/src/xpcom/: IMessageRemoteService.h  IMessageRemoteService.idl  Makefile.am  Makefile.in  MessageRemoteService.cpp  MessageRemoteService.h
(+24606 files in other folders)
